--- a/main.css
+++ b/main.css
@@ -37,10 +37,11 @@ body {
   line-height: 1.6;
   background-image: url(images/mars.jpg);
   background-size: cover;
-  background-size: cover;
   height: 100vh;
   overflow: hidden;
   color: var(--clr-light);
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 h1, h2, h3 {
@@ -80,13 +81,30 @@ a:hover {
 }
 
 .mars-current-weather {
-  background: rgba(0, 0, 0, 0.7);
+  background: rgba(0, 0, 0, 0.8);
   padding: 2em;
-  max-width: 1000px;
-  margin: 4em 0 0 4em;
+  max-width: 45%;
+  margin: 12em 0 0 34em;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-gap: 2em;
+}
+
+@media (max-width: 768px) {
+  .mars-current-weather {
+    grid-template-columns: repeat(3, 1fr);
+    grid-gap: 2em;
+    color: yellow;
+    position: absolute;
+    width: -moz-fit-content;
+    width: fit-content;
+    margin: auto;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+}
+.mars-current-weather .info {
+  display: none;
 }
 
 .date {
@@ -131,7 +149,7 @@ a:hover {
 .wind__arrow {
   /*update custom props within JS to
    update the direction*/
-  --direction: 180deg;
+  --direction: 45deg;
   --size: 1rem;
   /* using custom props allows for calc to be used & updating size is easy*/
   height: calc(var(--size) * 3);
